# rust-by-example

./: .gitignore  Cargo.toml
actix-gcd/src/: main.rs
async-graphql/: Cargo.toml
async-graphql/src/: http_server.rs  lib.rs  main.rs  schema.rs
async-graphql/src/schema/: hello.rs
bubble-sort/src/: lib.rs
cheat-sheet/src/: main.rs
clone-n-copy/: Cargo.toml
clone-n-copy/src/: main.rs
control-flow/src/: main.rs
crates-and-modules/: Cargo.toml
crates-and-modules/src/: lib.rs  main.rs
crates-and-modules/src/japanese/: mod.rs
data-types/src/: main.rs
email-newsletter/: .env  Cargo.toml  configuration.yaml
email-newsletter/migrations/: 20211206203745_create_subscription.sql
email-newsletter/scripts/: db_init.sh
email-newsletter/src/: configuration.rs  lib.rs  main.rs  startup.rs
email-newsletter/src/routes/: health_check.rs  subscriptions.rs
email-newsletter/tests/: health_check.rs
enums/src/: main.rs
error-handling/src/: main.rs
generic-struct/src/: main.rs
generic-types/src/: main.rs
heap-memory/: Cargo.toml
heap-memory/src/: main.rs
instantiating-structs/: Cargo.toml
instantiating-structs/src/: main.rs
looping-n-iterator/src/: main.rs
match-control/src/: main.rs
merge-sort/src/: lib.rs
method-syntax/src/: main.rs
ownership/src/: main.rs
pointers/src/: main.rs
pokeapi/: Cargo.toml
pokeapi/src/: api_client.rs  error.rs  handler.rs  main.rs  pokemon_specie.rs
process-csv/: Cargo.toml  test.csv
process-csv/src/: main.rs
references-and-borrowing/src/: main.rs
simple-program-using-structs/: Cargo.toml
simple-program-using-structs/src/: main.rs
slice-type/src/: main.rs
src/: main.rs
tokio-channels/: Cargo.toml
tokio-channels/examples/: hello-redis.rs
tokio-channels/src/: main.rs
tokio-shared-state/: Cargo.toml
tokio-shared-state/src/: main.rs
tokio-spawning/: Cargo.toml
tokio-spawning/src/: main.rs
trait-definition/: Cargo.toml
trait-definition/src/: lib.rs  main.rs
variables-and-mutability/: Cargo.toml
variables-and-mutability/src/: main.rs
