[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.0.0-beta.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.130"
sqlx = { version = "0.5.1", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
