[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.0.0-beta.10"
chrono = "0.4.15"
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.130"
sqlx = { version = "0.5.1", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
