[package]
name = "pokeapi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
reqwest = "0.11.17"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-actix-web = "0.7.4"
tracing-subscriber = "0.3.17"

[dev-dependencies]
actix-rt = "2.8.0"
mockito = "1.0.2"
